--- a/diplomatiki/.classpath
+++ b/diplomatiki/.classpath
@@ -14,6 +14,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/goal_metamodel.edit"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/goal_metamodel.editor"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/goal_metamodel.tests"/>
-	<classpathentry kind="lib" path="C:/Users/debah/eclipse/java-photon/org.eclipse.emf.common.jar"/>
+	<classpathentry kind="lib" path="/home/mik/Downloads/Untitled Folder 2/org.eclipse.emf.common-2.15.0.jar"/>
+	<classpathentry kind="lib" path="/home/mik/Downloads/Untitled Folder 2/ecore-2.3.0-v200706262000.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
